fix: reactive layout bug

--- a/css/index-large.css
+++ b/css/index-large.css
@@ -18,8 +18,8 @@
     rgba(196, 1, 212, 0.55) 33%,
     rgba(1, 182, 212, 0.35) 100%
   );
-  padding: 0 100px;
-  min-width: 540px;
+  padding: 0 20px;
+  min-width: 700px;
 }
 .header h1 {
   margin-top: 54px;
@@ -47,7 +47,7 @@
   transform: translate(24px);
 }
 .header-nav li + li {
-  margin-left: 20px;
+  margin: 0 0 0 20px;
 }
 .header-nav > li:not(:first-child) {
   display: none;
